WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20594
Interfaces for KeyframeRules missing
https://bugs.webkit.org/show_bug.cgi?id=20594
Summary
Interfaces for KeyframeRules missing
Dean Jackson
Reported
2008-09-01 17:26:59 PDT
WebKitCSSKeyframeRule and WebKitCSSKeyframesRule are missing IDL and DOM interfaces.
Attachments
IDL files and build config
(18.62 KB, patch)
2008-09-01 18:43 PDT
,
Dean Jackson
hyatt
: review-
Details
Formatted Diff
Diff
updated patch with testcase
(27.40 KB, patch)
2008-09-02 17:25 PDT
,
Dean Jackson
hyatt
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2008-09-01 17:28:45 PDT
<
rdar://problem/6186330
>
Dean Jackson
Comment 2
2008-09-01 18:43:46 PDT
Created
attachment 23107
[details]
IDL files and build config
Dave Hyatt
Comment 3
2008-09-02 15:19:53 PDT
Comment on
attachment 23107
[details]
IDL files and build config Should be able to make a text layout test that accesses these interfaces from a stylesheet.
Dean Jackson
Comment 4
2008-09-02 17:25:23 PDT
Created
attachment 23131
[details]
updated patch with testcase Patch now includes the other IDL and has a groovy test (which unfortunately fails on TOT - will open a new bug)
Dave Hyatt
Comment 5
2008-09-03 13:06:47 PDT
Comment on
attachment 23131
[details]
updated patch with testcase r=me
Dean Jackson
Comment 6
2008-09-03 14:16:27 PDT
Committed
r36066
M WebCore/GNUmakefile.am M WebCore/bindings/js/JSCSSRuleCustom.cpp M WebCore/bindings/objc/DOMInternal.h M WebCore/DerivedSources.make M WebCore/WebCore.xcodeproj/project.pbxproj M WebCore/WebCore.pro M WebCore/ChangeLog M WebCore/WebCore.vcproj/WebCore.vcproj A WebCore/css/WebKitCSSKeyframesRule.idl A WebCore/css/WebKitCSSKeyframeRule.idl M WebCore/WebCoreSources.bkl M LayoutTests/ChangeLog A LayoutTests/css3/keyframes-rule-expected.txt A LayoutTests/css3/keyframes-rule.html
Dean Jackson
Comment 7
2008-09-03 14:46:42 PDT
Layout test fail bug -
http://bugs.webkit.org/show_bug.cgi?id=20613
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug