2008-09-01  Dean Jackson  <dino@apple.com>

Reviewed by Dave Hyatt.

        https://bugs.webkit.org/show_bug.cgi?id=20594
        Add DOM interfaces for WebKitCSSKeyframeRule
        and WebKitCSSKeyframesRule.

        TEST: LayoutTests/css3/keyframes-rule.html

        * css/WebKitCSSKeyframeRule.idl: Added
        * css/WebKitCSSKeyframesRule.idl: Added

        * bindings/js/JSCSSRuleCustom.cpp:
        (WebCore::toJS):
            Add return of new JS Keyframe rules
        * bindings/objc/DOMInternal.h:
            Include new internal header

        * DerivedSources.make:
        * GNUmakefile.am:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * WebCoreSources.bkl:
            Build configs for new files


Canonical link: https://commits.webkit.org/28467@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@36066 268f45cc-cd09-0410-ab3c-d52691b4dbfc